# google-hackathon

./: app.py  process-audio-pitch-deck.py
UI-ai-startup-evaluation/: Dockerfile  app.py  requirements.txt
UI-ai-startup-evaluation/templates/: index.html  results.html
ai-startp-evaluation/: Dockerfile
ai-startup-evaluation/: app.py  requirements.txt
cloud-functions/document-ai-invoker/: main.py  requirements.txt
cloud-functions/linkedin_scraper/: Dockerfile  main.py  requirements.txt
cloud-functions/pitch-deck-uploader/: main.py  requirements.txt
cloud-functions/refiner-agent/: main.py  (+1 more)
process-audio-pitch-deck/: .env  requirements.txt
startup_investment_analyst/: .env  agent.py  deploy.py  pyproject.toml  run_full_local.py  run_local.py  tools.yaml
startup_investment_analyst/deployment/: deploy.py
startup_investment_analyst/shared_libraries/: constants.py
startup_investment_analyst/sub_agents/checker/: __init__.py  agent.py  prompt.py
startup_investment_analyst/sub_agents/financial/: agent.py  prompt.py
startup_investment_analyst/sub_agents/market_intel/: agent.py  prompt.py
startup_investment_analyst/sub_agents/operational/: agent.py  prompt.py
startup_investment_analyst/sub_agents/researcher/: agent.py  prompt.py  test_researcher_agent.py
startup_investment_analyst/sub_agents/synthesis/: agent.py  prompt.py
startup_investment_analyst/tools/: bq_connector.py  checker_gcs_backfill_tool.py  checker_null_fields_tool.py  finance.py  json_uploader_tool.py  operational_tool.py
static/: style.css
templates/: deal_note.html
